--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,27 +1,56 @@
-.example {
+*{
+  box-sizing: border-box;
+}
+
+body{
+  background-color: lightgrey;
+}
+
+.list {
+  list-style: none;
+  border-left: 10px solid #FC7574;
+  padding: 0;
+}
+
+.list li {padding: 10px;}
+.list li:nth-child(odd) {background: lightblue}
+.list li:nth-child(even) {background: white;}
+
+
+.container {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.5;
-  background-color: #fff;
-  color: #424242;
-  max-width: 960px;
-  padding: 16px;
+  color: black;
+  min-width: 450px;
+  padding: 15px;
 }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #009688;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
+.input{
+  // min-width: 420px;
+  font-size: 20px;
+  padding: 15px;
+  margin: 10px 0;
+  border: 2px solid #eee;
+  border-radius: 5px;
+  box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
 }
 
-.example .background {
-  height: 240px;
-  // Путь к изображениям из SASS-файла всегда такой, как из папки css
-  background-image: url('../images/demo.jpg');
-  background-size: cover;
-  background-position: center;
+.card-container{
+  padding: 15px;
+}
+
+.card{
+  display: flex;
+  justify-content: space-between;
+}
+
+img {
+  max-width: 50%;
+  height: auto;
+  margin-left: 16px;
+}
+
+list{
+  font-size: 25px;
 }
